--- a/index.html
+++ b/index.html
@@ -22,62 +22,50 @@
         <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
             <nav class="navbar navbar-light navbar-expand-md border rounded shadow-none navigation-clean" style="background-color: #273039;color: rgb(255,255,255);">
                 <div class="container"><a class="navbar-brand" href="#"><img style="background-image: url(&quot;assets/img/logo.png&quot;);width: 381px;height: 45px;" src="assets/img/logo.png">&nbsp;</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                    <div
-                        class="collapse navbar-collapse" id="navcol-1">
+                    <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav ml-auto" style="color: #2a7bb6;">
                             <li class="nav-item"><a class="nav-link active" style="color: #2a7bb6;font-family: 'Open Sans', sans-serif;" href="index.html"><i class="far fa-question-circle"></i><strong>&nbsp;About</strong></a></li>
                             <li class="dropdown nav-item" style="color: rgb(42,123,182);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;background-color: rgba(255,255,255,0);" href="#"><i class="fas fa-project-diagram"></i><strong>&nbsp;Projects</strong></a>
-                                <div
-                                    class="dropdown-menu border-secondary" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="osteosort.html"><strong>OsteoSort</strong></a>
+                                <div class="dropdown-menu border-secondary" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="osteosort.html"><strong>OsteoSort</strong></a>
                                     <div class="dropdown-divider text-warning border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="tools.html"><strong>FA Analytical Tools</strong><br></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>Centroid Banding</strong></a>
                                     <div class="dropdown-divider border-secondary"></div>
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
+                                <div class="dropdown-menu border-secondary" style="background-color: #eeeeee;"><a class="dropdown-item" style="color: #273039;font-size: 14px;" href="http://osteosort.net" target="_blank"><strong>OsteoSort</strong></a>
+                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a>
+                                </div>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
+                        </ul>
+                    </div>
                 </div>
-                </li>
-                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
-                    <div class="dropdown-menu border-secondary"
-                        style="background-color: #eeeeee;"><a class="dropdown-item" style="color: #273039;font-size: 14px;" href="http://osteosort.net" target="_blank"><strong>OsteoSort</strong></a>
-                        <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a></div>
-                </li>
-                <li class="nav-item"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
-                </ul>
+            </nav>
         </div>
-    </div>
-    </nav>
-    </div>
-    <div class="col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
-        <hr style="color: #2a7bb6;background-color: #273039;">
-        <h2 class="text-center" style="font-family: 'Open Sans', sans-serif;color: #273039;"><strong>Forensic Anthropology Data Science</strong><br></h2>
-        <h6 class="text-center"><br>Powered By:<br>&nbsp;&nbsp;<a href="https://www.kernel.org/" target="_blank"><img class="flash animated" src="assets/img/Tux.png" width="50"></a>&nbsp;&nbsp;<a href="https://julialang.org/" target="_blank"><img class="flash animated" src="assets/img/julia.png" width="75"></a>&nbsp;
-            &nbsp;<a href="https://www.r-project.org/" target="_blank"><img class="flash animated" src="assets/img/R.png" width="75"></a>&nbsp; &nbsp;<a href="https://shiny.rstudio.com/" target="_blank"><img class="flash animated" src="assets/img/shiny.png" width="70"></a></h6>
-        <hr
-            style="color: #2a7bb6;background-color: #273039;">
+        <div class="col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
+            <hr style="color: #2a7bb6;background-color: #273039;">
+            <h2 class="text-center" style="font-family: 'Open Sans', sans-serif;color: #273039;"><strong>Forensic Anthropology Data Science</strong><br></h2>
+            <h6 class="text-center"><br>Powered By:<br>&nbsp;&nbsp;<a href="https://www.kernel.org/" target="_blank"><img class="flash animated" src="assets/img/Tux.png" width="50"></a>&nbsp;&nbsp;<a href="https://julialang.org/" target="_blank"><img class="flash animated" src="assets/img/julia.png" width="75"></a>&nbsp; &nbsp;<a href="https://www.r-project.org/" target="_blank"><img class="flash animated" src="assets/img/R.png" width="75"></a>&nbsp; &nbsp;<a href="https://shiny.rstudio.com/" target="_blank"><img class="flash animated" src="assets/img/shiny.png" width="70"></a></h6>
+            <hr style="color: #2a7bb6;background-color: #273039;">
             <h4>What is this site?</h4>
-            <p class="text-left">This site contains forensic anthropology data science projects and source code written primarily in the Julia and R programming languages. All source code is released 'as is' and is licensed as open source under the GPL version 2 or MIT licenses.
-                Integrated code is released under a license relevant to their original license requirements and is stated within the root of the source code files. Particular tools can be used directly from the website through a Shiny UI.&nbsp;</p><div><br><br></div>
+            <p class="text-left">This site contains forensic anthropology data science projects and source code written primarily in the Julia and R programming languages. All source code is released 'as is' and is licensed as open source under the GPL version 2 or MIT licenses. Integrated code is released under a license relevant to their original license requirements and is stated within the root of the source code files. Particular tools can be used directly from the website through a Shiny UI.&nbsp;</p><div><br><br></div>
             <h4>What's new</h4>
-            <p>OsteoSort version 1.3.0 is currently under development. This includes the complete redevelopment of the analytical code in the Julia programming language. OsteoShiny is now fully integrated with OsteoSort and as a project is deprecated. The
-                legacy version of the OsteoSort live tool (version 1.2.6) is still available under 'Tools' in the navbar. This will be updated with 1.3.0 when the new version is released.</p><div><br><br></div>
+            <p>OsteoSort version 1.3.0 is currently in beta testing.</p><div><br><br></div>
             <h4>The Open Source Standard</h4>
-            <p>This website and all projects therein are developed with an open source standard to meet ISO 17205 requirements for usability within a legal context. This includes full and open disclosure of all source code to aid with future auditing and
-                traceability, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified. For a comprehensive list of open source licenses see&nbsp;<a href="https://opensource.org/licenses">https://opensource.org/licenses</a>.</p><div><br><br></div>
+            <p>This website and all projects therein are developed with an open source standard to meet ISO 17205 requirements for usability within a legal context. This includes full and open disclosure of all source code to aid with future auditing and traceability, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified. For a comprehensive list of open source licenses see&nbsp;<a href="https://opensource.org/licenses">https://opensource.org/licenses</a>.</p><div><br><br></div>
             <h4>Associated Publications</h4>
-            <p>Lynch JJ, Byrd JE, LeGarde CB. The Power of Exclusion using Automated Osteometric Sorting: Pair-matching. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13560">https://doi.org/10.1111/1556-4029.13560</a><br>&nbsp;&nbsp;<br>Lynch
-                JJ. An Analysis on the Choice of Alpha Level in the Osteometric Pair-matching of the Os Coxa, Scapula, and Clavicle. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13599">https://doi.org/10.1111/1556-4029.13599</a><br>&nbsp;&nbsp;<br>Lynch
-                JJ. The Automation of Regression Modeling in Osteometric Sorting: An Ordination Approach. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13597">https://doi.org/10.1111/1556-4029.13597</a><br>&nbsp;&nbsp;<br>Lynch
-                JJ. An Automated Two-dimensional Form Registration Method for Osteological Pair-matching. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13670">https://doi.org/10.1111/1556-4029.13670</a><br>&nbsp;&nbsp;<br>Lynch
-                JJ. An Automated Two-dimensional Pairwise Form Registration Method for Pair-matching of Fragmented Skeletal Remains. <br>Journal of Forensic Sciences <a href="http://dx.doi.org/10.1111/1556-4029.13787">http://dx.doi.org/10.1111/1556-4029.13787</a><br>&nbsp;&nbsp;<br>Lynch
-                JJ, Stephan CN. Computational Tools in Forensic Anthropology: The Value of Open-Source Licensing as a Standard. <br>Forensic Anthropology <a href="http://dx.doi.org/10.5744/fa.2018.0025">http://dx.doi.org/10.5744/fa.2018.0025</a><br>&nbsp;&nbsp;<br>Warnke-Sommer
-                JD, Lynch JJ, Pawaskar SS, Z-Transform Method for Pairwise Osteometric Pair-matching.<br>Journal of Forensic Sciences&nbsp;<a href="http://dx.doi.org/10.1111/1556-4029.13813">http://dx.doi.org/10.1111/1556-4029.13813</a><br></p><div><br><br></div>
+            <p>Lynch JJ, Byrd JE, LeGarde CB. The Power of Exclusion using Automated Osteometric Sorting: Pair-matching. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13560">https://doi.org/10.1111/1556-4029.13560</a><br>&nbsp;&nbsp;<br>Lynch JJ. An Analysis on the Choice of Alpha Level in the Osteometric Pair-matching of the Os Coxa, Scapula, and Clavicle. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13599">https://doi.org/10.1111/1556-4029.13599</a><br>&nbsp;&nbsp;<br>Lynch JJ. The Automation of Regression Modeling in Osteometric Sorting: An Ordination Approach. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13597">https://doi.org/10.1111/1556-4029.13597</a><br>&nbsp;&nbsp;<br>Lynch JJ. An Automated Two-dimensional Form Registration Method for Osteological Pair-matching. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13670">https://doi.org/10.1111/1556-4029.13670</a><br>&nbsp;&nbsp;<br>Lynch JJ. An Automated Two-dimensional Pairwise Form Registration Method for Pair-matching of Fragmented Skeletal Remains. <br>Journal of Forensic Sciences <a href="http://dx.doi.org/10.1111/1556-4029.13787">http://dx.doi.org/10.1111/1556-4029.13787</a><br>&nbsp;&nbsp;<br>Lynch JJ, Stephan CN. Computational Tools in Forensic Anthropology: The Value of Open-Source Licensing as a Standard. <br>Forensic Anthropology <a href="http://dx.doi.org/10.5744/fa.2018.0025">http://dx.doi.org/10.5744/fa.2018.0025</a><br>&nbsp;&nbsp;<br>Warnke-Sommer JD, Lynch JJ, Pawaskar SS, Z-Transform Method for Pairwise Osteometric Pair-matching.<br>Journal of Forensic Sciences&nbsp;<a href="http://dx.doi.org/10.1111/1556-4029.13813">http://dx.doi.org/10.1111/1556-4029.13813</a><br></p><div><br><br></div>
             <h4>Contact</h4>
-            <p>Technical inquiries can be sent to jjlynch [at] osteocoder [dot] com or submitted as issues on the relevant GitHub repositories.</p><div><br><br></div></div>
-    <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
-        <footer class="border rounded" style="background-color: #273039;">
-            <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
-        </footer>
-    </div>
+            <p>Technical inquiries can be sent to jjlynch [at] osteocoder [dot] com or submitted as issues on the relevant GitHub repositories.</p><div><br><br></div>
+        </div>
+        <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
+            <footer class="border rounded" style="background-color: #273039;">
+                <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
+            </footer>
+        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
