--- a/measurements.html
+++ b/measurements.html
@@ -22,36 +22,33 @@
         <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
             <nav class="navbar navbar-light navbar-expand-md border rounded shadow-none navigation-clean" style="background-color: #273039;color: rgb(255,255,255);">
                 <div class="container"><a class="navbar-brand" href="#"><img style="background-image: url(&quot;assets/img/logo.png&quot;);width: 381px;height: 45px;" src="assets/img/logo.png">&nbsp;</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                    <div
-                        class="collapse navbar-collapse" id="navcol-1">
+                    <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav ml-auto" style="color: #2a7bb6;">
                             <li class="nav-item"><a class="nav-link active" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="index.html"><i class="far fa-question-circle"></i><strong>&nbsp;About</strong></a></li>
                             <li class="dropdown nav-item" style="color: rgb(42,123,182);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #2a7bb6;font-family: 'Open Sans', sans-serif;background-color: rgba(255,255,255,0);" href="#"><i class="fas fa-project-diagram"></i><strong>&nbsp;Projects</strong></a>
-                                <div
-                                    class="dropdown-menu border-secondary" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="osteosort.html"><strong>OsteoSort</strong></a>
+                                <div class="dropdown-menu border-secondary" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="osteosort.html"><strong>OsteoSort</strong></a>
                                     <div class="dropdown-divider text-warning border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #2a7bb6;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="tools.html"><strong>FA Analytical Tools</strong><br></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>Centroid Banding</strong></a>
                                     <div class="dropdown-divider border-secondary"></div>
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
+                                <div class="dropdown-menu border-secondary" style="background-color: #eeeeee;"><a class="dropdown-item text-break" style="color: #273039;font-size: 14px;" href="http://osteosort.net" target="_blank"><strong>OsteoSort</strong></a>
+                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a>
+                                </div>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
+                        </ul>
+                    </div>
                 </div>
-                </li>
-                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
-                    <div class="dropdown-menu border-secondary"
-                        style="background-color: #eeeeee;"><a class="dropdown-item text-break" style="color: #273039;font-size: 14px;" href="http://osteosort.net" target="_blank"><strong>OsteoSort</strong></a>
-                        <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a></div>
-                </li>
-                <li class="nav-item"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
-                </ul>
+            </nav>
         </div>
-    </div>
-    </nav>
-    </div>
-    <div class="col-auto col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
-        <h4>Measurement Standards</h4>
-        <p>This project standardizes measurement numbers across multiple measurement procedures. Due to changing standard numbers, this measurement guide was created to avoid downstream issues with CoRA and OsteoSort. These numbers will never change unless
-            significant errors are identified. If a measurement becomes deprecated, the number will be indefinitely reserved. These standards provide a stable numbering platform on which advanced analytics can be built.</p>
-        <p>Current version: 0.0.1<br>Download: &nbsp;<a href="Standard_Measurements.csv" target="_blank">CSV</a><br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover" style="width:100%">
+        <div class="col-auto col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
+            <h4>Measurement Standards</h4>
+            <p>This project standardizes measurement numbers across multiple measurement procedures. Due to changing standard numbers, this measurement guide was created to avoid downstream issues with CoRA and OsteoSort. These numbers will never change unless significant errors are identified. If a measurement becomes deprecated, the number will be indefinitely reserved. These standards provide a stable numbering platform on which advanced analytics can be built.</p>
+            <p>Current version: 0.0.1<br>Download: &nbsp;<a href="Standard_Measurements.csv" target="_blank">CSV</a><br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover" style="width:100%">
 <thead>
 <tr class="row-1 odd">
 	<th class="column-1">OsteoCodeR 2019</th><th class="column-2">Buikstra &amp; Ubelaker 1994</th><th class="column-3">UTK 1994</th><th class="column-4">UTK 2016</th><th class="column-5">Byrd &amp; Adams 2003</th><th class="column-6">Simmons 1990</th><th class="column-7">Holland 1992</th><th class="column-8">Holland 1995</th><th class="column-9">Howells 1973</th>
@@ -749,12 +746,13 @@
 	<td class="column-1">Cer2_02</td><td class="column-2"></td><td class="column-3"></td><td class="column-4"></td><td class="column-5">81B (right)</td><td class="column-6"></td><td class="column-7"></td><td class="column-8"></td><td class="column-9"></td>
 </tr>
 </tbody>
-</table><div><br><br></div></div>
-    <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
-        <footer class="border rounded" style="background-color: #273039;">
-            <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
-        </footer>
-    </div>
+</table><div><br><br></div>
+        </div>
+        <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
+            <footer class="border rounded" style="background-color: #273039;">
+                <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
+            </footer>
+        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
