--- a/osteosort.html
+++ b/osteosort.html
@@ -22,64 +22,64 @@
         <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
             <nav class="navbar navbar-light navbar-expand-md border rounded shadow-none navigation-clean" style="background-color: #273039;color: rgb(255,255,255);">
                 <div class="container"><a class="navbar-brand" href="#"><img style="background-image: url(&quot;assets/img/logo.png&quot;);width: 381px;height: 45px;" src="assets/img/logo.png">&nbsp;</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                    <div
-                        class="collapse navbar-collapse" id="navcol-1">
+                    <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav ml-auto" style="color: #2a7bb6;">
                             <li class="nav-item"><a class="nav-link active" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="index.html"><i class="far fa-question-circle"></i><strong>&nbsp;About</strong></a></li>
                             <li class="dropdown nav-item" style="color: rgb(42,123,182);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #2a7bb6;font-family: 'Open Sans', sans-serif;background-color: rgba(255,255,255,0);" href="#"><i class="fas fa-project-diagram"></i><strong>&nbsp;Projects</strong></a>
-                                <div
-                                    class="dropdown-menu border-secondary" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" style="font-size: 14px;color: #2a7bb6;" href="osteosort.html"><strong>OsteoSort</strong></a>
+                                <div class="dropdown-menu border-secondary" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" style="font-size: 14px;color: #2a7bb6;" href="osteosort.html"><strong>OsteoSort</strong></a>
                                     <div class="dropdown-divider text-warning border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="tools.html"><strong>FA Analytical Tools</strong><br></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>Centroid Banding</strong></a>
                                     <div class="dropdown-divider border-secondary"></div>
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
+                                <div class="dropdown-menu border-secondary" style="background-color: #eeeeee;"><a class="dropdown-item" style="color: #273039;font-size: 14px;" href="http://osteosort.net" target="_blank"><strong>OsteoSort</strong></a>
+                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a>
+                                </div>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
+                        </ul>
+                    </div>
                 </div>
-                </li>
-                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
-                    <div class="dropdown-menu border-secondary"
-                        style="background-color: #eeeeee;"><a class="dropdown-item" style="color: #273039;font-size: 14px;" href="http://osteosort.net" target="_blank"><strong>OsteoSort</strong></a>
-                        <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a></div>
-                </li>
-                <li class="nav-item"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
-                </ul>
+            </nav>
         </div>
-    </div>
-    </nav>
-    </div>
-    <div class="col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
-        <h4>OsteoSort</h4>
-        <p>OsteoSort is an osteological sorting package for R. A variety of quantitative tools are available with an emphasis on model construction. The latest version, 1.3.0, is a significant redevelopment of the backend analytical platform. Most of the
-            source code is now written in the Julia programming language, which provides cross platform parallel support for any method that requires multiple comparisons (e.g. large commingled assemblages).<br><br></p><div><br></div>
-        <div class="row">
-            <div class="col-md-6">
-                <h5>Technical Requirements:</h5><font size="1"><ol>
+        <div class="col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
+            <h4>OsteoSort</h4>
+            <p>OsteoSort is an osteological sorting package for R. A variety of quantitative tools are available with an emphasis on model construction. The latest version, 1.3.0, is a significant redevelopment of the backend analytical platform. Most of the source code is now written in the Julia programming language, which provides cross platform parallel support for any method that requires multiple comparisons (e.g. large commingled assemblages).<br><br></p><div><br></div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Technical Requirements:</h5><font size="1"><ol>
     <li type="square"><p style="margin:2px">Linux, macOS, or Windows 7/8/10</p></li>
     <li type="square"><p style="margin:2px">R version >= 3.3.0</p></li>
     <li type="square"><p style="margin:2px">Julia version >= 1.0.0</p></li>
    <li type="square"><p style="margin:2px">Recommended > 8 gigabytes of RAM</p></li>
-    </font></ol></div>
-            <div class="col-md-6">
-                <h5>Installation from R:</h5><div style="background-color:lightgrey;width:100%;border-style:dashed;border-width:1px">   
+    </font></ol>
+                </div>
+                <div class="col-md-6">
+                    <h5>Installation from R:</h5><div style="background-color:lightgrey;width:100%;border-style:dashed;border-width:1px">   
 <font size="1">
     <span style="margin:2px;color:#2a7bb6">library(devtools)<br>
         install.github("jjlynch2/OsteoSort", ref="v1.3.0")<br>
         library(OsteoSort)<br>
        OsteoSort()
-    </span></font></div><br><br></div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <h5>Julia Dependencies:</h5><font size="1"><ol>
+    </span></font></div><br><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Julia Dependencies:</h5><font size="1"><ol>
     <li type="square"><p style="margin:2px">Distributed</p></li>
     <li type="square"><p style="margin:2px">Statistics</p></li>
     <li type="square"><p style="margin:2px">Rmath</p></li>
    <li type="square"><p style="margin:2px">GLM</p></li>
     <li type="square"><p style="margin:2px">Optim</p></li>
     <li type="square"><p style="margin:2px">SharedArrays</p></li>
-    </font></ol></div>
-            <div class="col-md-6">
-                <h5>R Dependencies:</h5><font size="1"><ol>
+    </font></ol>
+                </div>
+                <div class="col-md-6">
+                    <h5>R Dependencies:</h5><font size="1"><ol>
     <li type="square"><p style="margin:2px">pixmap</p></li>
     <li type="square"><p style="margin:2px">jpeg</p></li>
     <li type="square"><p style="margin:2px">Morpho</p></li>
@@ -90,14 +90,22 @@
     <li type="square"><p style="margin:2px">rgl</p></li>
     <li type="square"><p style="margin:2px">ClusterR</p></li>
     <li type="square"><p style="margin:2px">JuliaCall</p></li>
-    </font></ol><br><br></div>
+    <li type="square"><p style="margin:2px">ggplot2</p></li>
+    <li type="square"><p style="margin:2px">networkD3</p></li>
+    <li type="square"><p style="margin:2px">network</p></li>
+    <li type="square"><p style="margin:2px">sna</p></li>
+    <li type="square"><p style="margin:2px">grid</p></li>
+    <li type="square"><p style="margin:2px">dplyr</p></li>
+
+    </font></ol><br><br>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
-        <footer class="border rounded" style="background-color: #273039;">
-            <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
-        </footer>
-    </div>
+        <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
+            <footer class="border rounded" style="background-color: #273039;">
+                <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
+            </footer>
+        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
